--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
     return 301 https://$host$request_uri;
     }
     location /api/ {
-        proxy_pass http://panel.realive.co.il:5000/api/;
+        proxy_pass http://34.243.245.127:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header   Upgrade $http_upgrade;
         proxy_set_header   Connection keep-alive;
@@ -31,7 +31,7 @@ http {
         proxy_set_header   X-Forwarded-Proto $scheme;
     }
     location / {
-        proxy_pass http://panel.realive.co.il:8012;
+        proxy_pass http://34.243.245.127:8012;
     }
 
     error_page   500 502 503 504  /50x.html;
